2001-06-06  Richard Frith-Macdonald <rfm@gnu.org>

	Changes for constant string support with gcc-3.0
	* configure.in: Just substitute NXCONST
	* Headers/gnustep/base/GSConfig.h.in: Use NXCONST to redefine
	NXConstantString
	* Headers/gnustep/base/NSString.h: new constantStringClass method.
	* Source/GSString.m: new constantStringClass method.
	* Source/NSObject.m: Use NSConstantStringClass.
	* Source/NSScanner.m: Use NSConstantStringClass.
	* Source/NSString.m: implement constantStringClass method.

2001-06-06  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/mframe.m: Reactivated inling nested functions after 
	gcc 3.0 was fixed to compile them again.

2001-06-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile: If GNUSTEP_MAKEFILES is not set, tell the user it
	needs to source GNUstep.sh and then exit with an error.

2001-06-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/mframe.m: Disabled inlining of nested functions.  This
	should allow gnustep-base to be compiled using gcc 3.0.

2001-06-05  Richard Frith-Macdonald  <rfm@gnu.uk>

	* Source/GSString.m: ([replaceCharactersInRange:withString:])
	Fix error appending unicode string to C string.

2001-06-01  Richard Frith-Macdonald  <rfm@gnu.uk>

	* Source/NSString.m: Patch by David Relson applied

2001-06-01  Richard Frith-Macdonald  <rfm@gnu.uk>

	Optimisations suggested by Guenther Fuerthaller
	* Source/NSZone.m: NSZonefromPointer() check for empty zones
	list before locking.
	* Source/NSData.m: more efficient dealloc implementation for
	NSMutableDataMalloc.

2001-06-01  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSCalendarDate.m
	([-descriptionWithCalendarFormat:locale:]): Fixed %w (day of the
	week) to output a single digit number rather than a two digit one.

2001-05-31  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime.h (GSLastErrorStr): Define new
	OS-independant strerror like function.
	* Source/GSFormat.m: Use it.